# chat-buddy

./: .gitignore  AGENT.md  LICENSE  README.md  alembic.ini  constraints.txt  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 8c080da941a4_create_conversations_and_messages_tables.py
docs/decisions/: 001-python-312.md  002-streamlit-ui.md  003-postgres-db.md  004-local-ollama.md  005-repository-pattern.md
src/chat_buddy/application/: chat_service.py  context_builder.py  conversation_service.py  schemas.py
src/chat_buddy/config/: config.py
src/chat_buddy/db/: models.py  repository.py  session.py
src/chat_buddy/domain/: chat.py  context.py  tokenization.py
src/chat_buddy/infrastructure/config/: logging.py  settings.py
src/chat_buddy/infrastructure/db/: models.py  models_check.py  repositories.py  repository_check.py  session.py  session_check.py
src/chat_buddy/infrastructure/llm/: base.py  ollama_gateway.py
src/chat_buddy/infrastructure/tokenization/: mistral_token_counter.py
src/chat_buddy/ui/: streamlit_app.py
tests/: conftest.py
tests/application/: test_chat_service.py  test_context_builder.py
tests/infrastructure/db/: test_conversation_repository.py
tests/infrastructure/tokenization/: test_mistral_token_counter.py
tests/integration/: test_chat_service_repository.py
tests/service/: test_chat_service.py
